NetBSD Problem Report #44296

From jruohone@gmail.com  Thu Dec 30 09:22:40 2010
Return-Path: <jruohone@gmail.com>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id C62B763B89F
	for <gnats-bugs@gnats.netbsd.org>; Thu, 30 Dec 2010 09:22:40 +0000 (UTC)
Message-Id: <20101230092235.525DBF891@marx.bitnet>
Date: Thu, 30 Dec 2010 11:22:35 +0200 (EET)
From: Jukka Ruohonen <jruohonen@iki.fi>
Sender: a b <jruohone@gmail.com>
Reply-To: jruohonen@iki.fi
To: gnats-bugs@gnats.NetBSD.org
Subject: iwn(4) panics during suspend
X-Send-Pr-Version: 3.95

>Number:         44296
>Category:       kern
>Synopsis:       iwn(4) panics during suspend
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Dec 30 09:25:00 +0000 2010
>Closed-Date:    Thu Dec 30 18:27:51 +0000 2010
>Last-Modified:  Thu Dec 30 18:30:02 +0000 2010
>Originator:     Jukka Ruohonen
>Release:        5.99.42
>Organization:
-
>Environment:
amd64
>Description:

The iwn(4) driver makes a 5.99.42 amd64 system panic upon suspend;

	...
	audio0: device_pmf_unlock.2350, sysctl dvl_nlock 0 dvl_nwait 0
	dv_flags 87 iwn0iwn0: device_pmf_lock1.2323, sysctl dvl_nlock 1
	dvl_nwait 0 dv_flags 7
	uvm_faulg(0xffff80004c353b80, 0x0, 4) -> e
	fatal page fault in supervisor mode
	trap type 6 code 10 rip 0 cs 8 rflacs 10246 cr2 0 cpl 6
	rsp ffff80004dc66938
	kernel: page fault trap, code=0
	Stopped in pid 3.1 (sysctl) at 0: invalid address
	db{1}>

Suspend is entirely reliable if iwn(4) is disabled via userconf(4).
This is a regression. The machine suspends and resumes fine in 5.1.

>How-To-Repeat:

Try to suspend a 4.99.42 system.

>Fix:

Under investigation.

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: jruoho@NetBSD.org
State-Changed-When: Thu, 30 Dec 2010 18:27:51 +0000
State-Changed-Why:
Fixed.


From: "Jukka Ruohonen" <jruoho@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44296 CVS commit: src/sys/dev/pci
Date: Thu, 30 Dec 2010 18:27:01 +0000

 Module Name:	src
 Committed By:	jruoho
 Date:		Thu Dec 30 18:27:01 UTC 2010

 Modified Files:
 	src/sys/dev/pci: if_iwn.c

 Log Message:
 Fill out struct ifnet::if_stop, which is required for network class devices
 in pmf(9). Fixes the panic reported in PR # kern/44296.


 To generate a diff of this commit:
 cvs rdiff -u -r1.50 -r1.51 src/sys/dev/pci/if_iwn.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.