Fill out struct ifnet::if_stop, which is required for network class devices in pmf(9). Fixes the panic reported in PR # kern/44296.